# start

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  astro.config.mjs  package-lock.json  package.json  sample-output.md  tailwind.config.mjs
01-ubuntu-setup/: 01-removing-snap.md  02-installing-firefox.md  03-essential-packages.md
02-git-and-github/: 01-git-configuration.md  02-ssh-keys.md  03-git-aliases.md  04-github-cli.md
03-development-tools/: 01-nvm-and-nodejs.md  02-vscode-setup.md
04-ai-assistants/: 01-claude-code-setup.md  02-gemini-cli-setup.md
05-your-first-project/: 01-project-creation.md  02-verification-checklist.md  03-next-steps.md  04-understanding-npm-and-node_modules.md
cli/: start.py
docs/: index.html  phase-001-completion.md
docs/_astro/: client.BjFUBrlX.js  client.OM3hyXbt.js  index.DMjPqsm9.css  index.astro_astro_type_script_index_0_lang.BImtrebh.js
scripts/: local-ci.sh  system-update.sh
src/components/: EnhancedFeatures.tsx  EnhancedHero.tsx  EnhancedQuickStart.tsx  Features.astro  Hero.astro  QuickStart.astro
src/components/ui/: button.tsx  card.tsx  progress.tsx
src/layouts/: Layout.astro
src/pages/: index.astro
standards/: README.md  agents-md.template  project-structure.yaml  python-uv-requirements.yaml
templates/: README.md
templates/python-project/: .gitignore  AGENTS.md  pyproject.toml
validators/: structure_validator.py  uv_validator.py
